# auv

./: .gitignore  .gitmodules  9-auv.rules  Jenkinsfile  README.md  robotrc  setup.sh
catkin_ws/src/arduino/: CMakeLists.txt  package.xml
catkin_ws/src/arduino/atmega32u4_depth/: atmega32u4_depth.ino  defs.h
catkin_ws/src/arduino/blinky/: blinky.ino  neopixel.cpp  neopixel.h  sin_table.h
catkin_ws/src/arduino/depth/: CMakeLists.txt  MS5803_I2C.cpp  MS5803_I2C.h  atmega32u4_depth.ino  depth.h  depth.ino
catkin_ws/src/arduino/launch/: arduino.launch  teensy.launch
catkin_ws/src/arduino/teensy/: defs.h  teensy.ino
catkin_ws/src/arduino/thrusters/: thrusters.h  thrusters.ino
catkin_ws/src/arduino/torpedo_test/: thrusterAndtorpedo.h  thrusterAndtorpedo.ino
catkin_ws/src/automate_drytest/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/automate_drytest/launch/: full_dry_test.launch
catkin_ws/src/automate_drytest/scripts/: drytest_thruster.py  full_dry_test.py  sensors_dry_test.py
catkin_ws/src/auv_base/: CMakeLists.txt  package.xml
catkin_ws/src/auv_base/config/: auv.yml
catkin_ws/src/auv_base/launch/: camera_down.launch  camera_front.launch  camera_front_2.launch
catkin_ws/src/auv_description/: CMakeLists.txt  package.xml
catkin_ws/src/auv_description/launch/: description.launch  view_model.launch
catkin_ws/src/auv_description/meshes/: hydrophones.stl
catkin_ws/src/auv_description/urdf/: bradbury.urdf.xacro
catkin_ws/src/auv_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/auv_gazebo/launch/: bradbury_empty_world.launch
catkin_ws/src/auv_gazebo/src/: depth_plugin.cpp  thruster_plugin.cpp
catkin_ws/src/auv_gazebo/urdf/: auv_gazebo.urdf.xacro  auv_plugins.urdf.xacro
catkin_ws/src/auv_gazebo/worlds/: empty_pool.world
catkin_ws/src/auv_msgs/: CMakeLists.txt  package.xml
catkin_ws/src/auv_msgs/action/: InitializeHorizon.action  SetVelocity.action  VisualServo.action
catkin_ws/src/auv_msgs/msg/: Lane.msg  PneumaticCommands.msg  SetVelocity.msg  TaskPointsArray.msg  TaskStatus.msg  ThrusterCommands.msg  TorpedoTarget.msg  VisualServoCommand.msg
catkin_ws/src/auv_simulation/: CMakeLists.txt  package.xml
catkin_ws/src/auv_viz/: CMakeLists.txt  package.xml
catkin_ws/src/auv_viz/config/: robot.rviz
catkin_ws/src/auv_viz/launch/: comp_env.launch  gui.launch  lane_env.launch
catkin_ws/src/auv_viz/src/: sim_auv.py
catkin_ws/src/controls/: CMakeLists.txt  README.md  package.xml  setup.py
catkin_ws/src/controls/action/: GoToDepth.action
catkin_ws/src/controls/config/: gains.yaml  joystick.config.yaml  params.yaml  pid_gains.yaml  sim_gains.yaml
catkin_ws/src/controls/launch/: controllers.launch  controls.launch  depth_maintainer.launch  joystick.launch  maintainers.launch  new_controls.launch  pid.launch  pid_controls.launch  sim_controls.launch  test_depth_maintainer.launch  test_yaw_maintainer.launch  visualServoOnly.launch  yaw_maintainer.launch
catkin_ws/src/controls/msg/: Pose.msg
catkin_ws/src/controls/scripts/: controls  joystick  thrust_mapper
catkin_ws/src/controls/src/: PID.py  controller.py  controller_server.py  controls.py  maintain_depth.py  maintain_yaw.py  pose_controller.py  process.py  superimposer.py
catkin_ws/src/controls/test/: CMakeLists.txt  package.xml
catkin_ws/src/cv/: CMakeLists.txt  laneServoLauncher.py  package.xml  rouletteLauncher.py  servoPracticeLauncher.py  setup.py
catkin_ws/src/cv/action/: Call_ORB.action
catkin_ws/src/cv/config/: cal_down.yaml  laneDetectorParams.cfg
catkin_ws/src/cv/launch/: LogitechCameras_all.launch  camera_all.launch  camera_front_1.launch  camera_front_2.launch  cans.launch  cv.launch  tinyYOLO_dice.launch
catkin_ws/src/cv/msg/: CvTarget.msg
catkin_ws/src/gui/: CMakeLists.txt  package.xml
catkin_ws/src/gui/frontend/: .angular-cli.json  README.md  package-lock.json  package.json
catkin_ws/src/gui/html/: example.html  index.html  publisher.html  subscriber.html
catkin_ws/src/gui/src/: test.js
catkin_ws/src/mission_planning/: CMakeLists.txt  package.xml
catkin_ws/src/mission_planning/DepthAndYawMaintainers/: depth_client.py  depth_server.py
catkin_ws/src/mission_planning/Task_Definitions/: bin_servo.py  move.py  move_all.py  shoot.py  sonar_servo.py
catkin_ws/src/mission_planning/Task_Lists/: Taskr_List.yaml
catkin_ws/src/planner/: CMakeLists.txt  package.xml
catkin_ws/src/planner/action/: Task.action
catkin_ws/src/planner/config/: acoustic_test.yaml  asimov_run.yaml  cond_tasks.yaml  cond_tasks_ad.yaml  cond_tasks_bc.yaml  cond_tasks_run2.yaml  cond_tasks_test.yaml  gate_only.yaml  octagon_only.yaml  planner.yaml  sandbox.yaml  square.yaml  tasks.yaml  test_bc.yaml
catkin_ws/src/planner/launch/: planner.launch
catkin_ws/src/planner/scripts/: XAutonomy  planner  planner_node  planner_node.py  static_state_machine
catkin_ws/src/robot/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/robot/launch/: drytest.launch
catkin_ws/src/simulation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/simulation/config/: robot.rviz  view_model.rviz
catkin_ws/src/simulation/launch/: description.launch  view_model.launch
catkin_ws/src/simulator/: CMakeLists.txt  package.xml
catkin_ws/src/sonar_proc/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/sonar_proc/launch/: sonar_proc.launch
catkin_ws/src/sonar_proc/msg/: Cluster.msg
catkin_ws/src/sonar_proc/scripts/: Clustering.py  beam_filter.py  dbscan_test.py  means.py  meanshift.py  meanshiftfifth.py  meanshiftfourth.py  meanshiftsecond.py  meanshiftthird.py  ms.py  pointcloud_to_laserscan.py  practice.py  scan_preprocessor.py  scan_preprocessor_third.py  scan_stitcher.py  slice_scan_stitcher.py  stitpractice.py
catkin_ws/src/sonar_proc/src/: clustering.py  dbscan_test.py  interpreter.py  main.cpp  mean_shift.py  scan_preprocessor.cpp  scan_preprocessor.py  task_point.py  (+1 more)
catkin_ws/src/state_estimation/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/taskr/: CMakeLists.txt  README.md  package.xml
catkin_ws/src/tools/: CMakeLists.txt  README.md  package.xml
(+302 files in other folders)
