<?xml version="1.0"?>
<package>
  <name>automate_drytest</name>
  <version>0.1.0</version>
  <description>The automate_drytest package</description>

  <maintainer email="malcolm.watt@mail.mcgill.ca">Malcolm Watt</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>auv_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>auv_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
