<?xml version="1.0"?>
<package>
  <name>auv_simulation</name>
  <version>0.0.0</version>
  <description>The auv_simulation package</description>
  <maintainer email="yichi.zhang@mail.mcgill.ca">Yichi Zhang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>auv_gazebo</build_depend>
  <run_depend>auv_gazebo</run_depend>

  <export>
  </export>
</package>
