<?xml version="1.0"?>
<package>
  <name>cv</name>
  <version>0.0.0</version>
  <description>The cv package</description>
  <maintainer email="gabriel.downs@mail.mcgill.ca">Gabriel Downs</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>tf</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>

  <export>
  </export>
</package>
