<?xml version="1.0"?>
<package format="2">
  <name>cv</name>
  <version>0.0.0</version>
  <description>The cv package</description>
  <maintainer email="gabriel.downs@mail.mcgill.ca">Gabriel Downs</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>pointgrey_camera_driver</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

</package>
