<?xml version="1.0"?>
<package>

  <name>planner</name>
  <version>0.1.0</version>
  <description>The McGill Robotics mission planning package</description>
  <maintainer email="jeremy.mallette@mail.mcgill.ca">Jeremy Mallette</maintainer>
  <license>GPLv3</license>

  <url>https://github.com/mcgill-robotics/auv/wiki/How-to-Planner-and-Taskr</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
      <!-- Possibly use to embed planner and taskr in the same package -->
  </export>

</package>
