<?xml version="1.0"?>
<package format="2">
  <name>robot</name>
  <version>0.0.0</version>
  <description>The Robot package</description>

  <maintainer email="jeremy.mallette@mail.mcgill.ca">Jeremy</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>auv_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <!--   <test_depend>gtest</test_depend> -->
  <!--   <doc_depend>doxygen</doc_depend> -->

</package>
