<?xml version="1.0"?>
<package format="2">
  <name>sonar_proc</name>
  <version>0.1.0</version>
  <description>The sonar_proc package</description>
  <maintainer email="jbpavlasek@gmail.com">Jana Pavlasek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>boost</build_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>pcl_ros</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>libpcl-all</depend>
</package>
