<?xml version="1.0"?>
<package format="2">
  <name>sonar_proc</name>
  <version>0.1.0</version>
  <description>The sonar_proc package</description>
  <maintainer email="jbpavlasek@gmail.com">Jana Pavlasek</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
    
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <depend>message_runtime</depend>
  <depend>libpcl-all</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
</package>
