<?xml version="1.0"?>
<package>
    
  <name>taskr</name>
  <version>0.1.0</version>
  <description>The McGill Robotics ActionLib-Task Interface</description>
  <maintainer email="jeremy.mallette@mail.mcgill.ca">Jeremy Mallette</maintainer>
  <license>GPLv3</license>

  <url>https://github.com/mcgill-robotics/auv/wiki/How-to-Planner-and-Taskr</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>controls</run_depend>

</package>
